--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ main{
 
 }
 
-
 .img-bg-blend{
     background-image: url('./images/backgroundimgblend.png'); 
     background-size: cover;
@@ -220,6 +219,7 @@ main{
     
 }
 .regcontainer{
+    margin-top: 200px;
     width: 600px;
     height: 600px;
     align-items: center;
@@ -228,7 +228,6 @@ main{
     border: 2px solid;
     border-color: black;
     box-shadow: 0 0 10px rgb(0, 0, 0,0.3);
-    z-index: 999;
 }
 .registration{
     display: flex;
@@ -954,7 +953,6 @@ h5{
 .cart_summary_checkout button{
     background-color: #15e606;
     width: 50%;
-    
     border: 0;
     border-radius: 7px;
     color: white;
@@ -968,4 +966,78 @@ h5{
     color: gold;
     margin-top: 100px;
     margin-left: 80px;
+}
+.coloredpencil_wrapper{
+    justify-content: space-between;
+    position: relative;
+    display: flex;
+    top: 100px;
+    width: 99.9%;
+    height: 850px;
+    border: #000000 1px solid;
+    background-color: rgb(25, 31, 36, 0.7);
+}
+.coloredpencil_picture{
+    width: 35%;
+    height: 60%;
+}
+.coloredpencil_picture img{
+    width: 600px;
+    height: 100%;
+}
+.product_name{
+    display: flex;
+    flex-direction: column;
+    width: 64%;
+    height: 100%;
+    
+}
+.product_name h2{
+    font-size: 55px;
+}
+.Pricelabel{
+    color: gold;
+    font-size: 35px;
+}
+.Description{
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+}
+.Description label{
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+.product_buttons{
+    justify-content: end;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: 40%;
+    
+}
+.product_buttons button{
+   margin-right: 100px;
+   width: 300px;
+   height: 50px;
+}
+.backbutton{
+    background-color: grey;
+    border: 0;
+    color: white;
+    width: 50%;
+    border-radius: 7px;
+    font-size: large;
+    font-weight: 600;
+    padding: 1ch 0;
+}
+.Addtocart{
+    background-color:#15e606;
+    border: 0;
+    color: white;
+    width: 50%;
+    border-radius: 7px;
+    font-size: large;
+    font-weight: 600;
+    padding: 1ch 0;
 }
